# aly-tool

./: .gitignore  LICENSE  README.md  architecture.html  concepts.html  configuration.html  constraints.html  contributing.html  examples.html  genindex.html  index.html  installation.html  ip_management.html  license.html  linting.html  manifest_system.html  objects.inv  py-modindex.html  pyproject.toml  quickstart.html  search.html  searchindex.js  simulation.html  synthesis.html  templates.html
.github/workflows/: docs.yml  publish.yml  release.yml  test.yml
_modules/: index.html
_modules/aly/config/: project_config.html
_modules/aly/templates/: loader.html
_sources/: architecture.rst.txt  concepts.rst.txt  constraints.rst.txt  contributing.rst.txt  index.rst.txt  ip_management.rst.txt  linting.rst.txt  manifest_system.rst.txt  simulation.rst.txt  templates.rst.txt
_sources/commands/: index.rst.txt
api/: index.html
commands/: index.html
docs/: Makefile  conf.py  requirements.txt  synthesis.md
docs/source/: api.rst  architecture.rst  changelog.rst  commands.rst  concepts.rst  conf.py  configuration.rst  constraints.rst  contributing.rst  examples.rst  extensions.rst  getting-started.rst  index.rst  installation.rst  ip_management.rst  license.rst  linting.rst  manifest_system.rst  quickstart.rst  rtl_workflow.rst  simulation.rst  synthesis.rst  templates.rst  workflow_overview.rst
docs/source/_static/: static.css
docs/source/_templates/: layout.html
docs/source/api/: index.rst
docs/source/commands/: index.rst
src/aly/: __init__.py  __main__.py  backends.py  commands.py  configuration.py  log.py  sim_questa.py  sim_verilator.py  sim_xsim.py  synth_vivado.py  synth_yosys.py  util.py  workflow_config.py
src/aly/app/: __init__.py  firmware.py  gen_mem.py  init.py  main.py  regress.py  simulate.py  synthesize.py
src/aly/templates/rv64i/: template.yaml
tests/: conftest.py  test_commands.py  test_configuration.py  test_util.py  test_workflow.py
